--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
         		<div class="pricing-entry pb-5 text-center">
         			<div>
 	        			<h3 class="mb-4">Basic</h3>
-	        			<p><span class="price">Ksh 200</span> <span class="per">/ session</span></p>
+	        			<p><span class="price">Ksh 200+</span> <span class="per">/ session</span></p>
 	        		</div>
         			<ul>
         				<li>Diagnostic Services</li>
@@ -429,7 +429,7 @@
         		<div class="pricing-entry pb-5 text-center">
         			<div>
 	        			<h3 class="mb-4">Standard</h3>
-	        			<p><span class="price">Ksh 200</span> <span class="per">/ session</span></p>
+	        			<p><span class="price">Ksh 200+</span> <span class="per">/ session</span></p>
 	        		</div>
         			<ul>
         				<li>Diagnostic Services</li>
@@ -445,7 +445,7 @@
         		<div class="pricing-entry active pb-5 text-center">
         			<div>
 	        			<h3 class="mb-4">Premium</h3>
-	        			<p><span class="price">Ksh 200</span> <span class="per">/ session</span></p>
+	        			<p><span class="price">Ksh 200+</span> <span class="per">/ session</span></p>
 	        		</div>
         			<ul>
         				<li>Diagnostic Services</li>
@@ -461,7 +461,7 @@
         		<div class="pricing-entry pb-5 text-center">
         			<div>
 	        			<h3 class="mb-4">Platinum</h3>
-	        			<p><span class="price">Ksh 200</span> <span class="per">/ session</span></p>
+	        			<p><span class="price">Ksh 200+</span> <span class="per">/ session</span></p>
 	        		</div>
         			<ul>
         				<li>Diagnostic Services</li>
@@ -513,7 +513,7 @@
             <div class="carousel-testimony owl-carousel ftco-owl">
               <div class="item">
                 <div class="testimony-wrap p-4 pb-5">
-                  <div class="user-img mb-5" style="background-image: url(images/person_1.jpg)">
+                  <div class="user-img mb-5" style="background-image: url(images/KYENDY.jpg)">
                     <span class="quote d-flex align-items-center justify-content-center">
                       <i class="icon-quote-left"></i>
                     </span>
@@ -527,7 +527,7 @@
               </div>
               <div class="item">
                 <div class="testimony-wrap p-4 pb-5">
-                  <div class="user-img mb-5" style="background-image: url(images/person_2.jpg)">
+                  <div class="user-img mb-5" style="background-image: url(images/WEKESA.jpg)">
                     <span class="quote d-flex align-items-center justify-content-center">
                       <i class="icon-quote-left"></i>
                     </span>
@@ -541,7 +541,7 @@
               </div>
               <div class="item">
                 <div class="testimony-wrap p-4 pb-5">
-                  <div class="user-img mb-5" style="background-image: url(images/person_3.jpg)">
+                  <div class="user-img mb-5" style="background-image: url(images/iggy.jpeg)">
                     <span class="quote d-flex align-items-center justify-content-center">
                       <i class="icon-quote-left"></i>
                     </span>
@@ -555,7 +555,7 @@
               </div>
               <div class="item">
                 <div class="testimony-wrap p-4 pb-5">
-                  <div class="user-img mb-5" style="background-image: url(images/person_1.jpg)">
+                  <div class="user-img mb-5" style="background-image: url(images/wincate.jpeg)">
                     <span class="quote d-flex align-items-center justify-content-center">
                       <i class="icon-quote-left"></i>
                     </span>
@@ -569,7 +569,7 @@
               </div>
               <div class="item">
                 <div class="testimony-wrap p-4 pb-5">
-                  <div class="user-img mb-5" style="background-image: url(images/person_1.jpg)">
+                  <div class="user-img mb-5" style="background-image: url(images/PHANICE.jpg)">
                     <span class="quote d-flex align-items-center justify-content-center">
                       <i class="icon-quote-left"></i>
                     </span>
@@ -691,7 +691,7 @@
 	            <h2 class="mb-2">Eye & Dental Care Procedures &amp; High Quality Affordable Services</h2>
 	          </div>
 	          <div class="ftco-animate">
-	          	<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar. Because there were thousands of bad Commas, wild Question Marks and devious Semikoli</p>
+	          	
 	          	<ul class="un-styled my-5">
 	          		<li><span class="icon-check"></span>Modern, Affordable Dental Treatment</li>
 	          		<li><span class="icon-check"></span>High Tech Eye Diagnosis and Treatment</li>
@@ -803,8 +803,8 @@
             	<div class="block-23 mb-3">
 	              <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text">KENOL town off Nairobi-Nyeri Highway, Maragwa, Muranga, Kenya</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">kanyisammy@gmail.com</span></a></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">0711 474 252</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">KMEDH2014@gmail.com</span></a></li>
 	              </ul>
 	            </div>
             </div>
@@ -814,7 +814,7 @@
           <div class="col-md-12 text-center">
 
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Sammy Kanyi</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This Website is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Sammy Kanyi | Alvin Gitonga Muthui | Kyendy Mauwi</a>
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
