--- a/services.html
+++ b/services.html
@@ -228,7 +228,7 @@
         		<div class="pricing-entry pb-5 text-center">
         			<div>
 	        			<h3 class="mb-4">Basic</h3>
-	        			<p><span class="price">Ksh 200</span> <span class="per">/ session</span></p>
+	        			<p><span class="price">Ksh 200+</span> <span class="per">/ session</span></p>
 	        		</div>
         			<ul>
         				<li>Diagnostic Services</li>
@@ -244,7 +244,7 @@
         		<div class="pricing-entry pb-5 text-center">
         			<div>
 	        			<h3 class="mb-4">Standard</h3>
-	        			<p><span class="price">Ksh 200</span> <span class="per">/ session</span></p>
+	        			<p><span class="price">Ksh 200+</span> <span class="per">/ session</span></p>
 	        		</div>
         			<ul>
         				<li>Diagnostic Services</li>
@@ -260,7 +260,7 @@
         		<div class="pricing-entry active pb-5 text-center">
         			<div>
 	        			<h3 class="mb-4">Premium</h3>
-	        			<p><span class="price">Ksh 200</span> <span class="per">/ session</span></p>
+	        			<p><span class="price">Ksh 200+</span> <span class="per">/ session</span></p>
 	        		</div>
         			<ul>
         				<li>Diagnostic Services</li>
@@ -276,7 +276,7 @@
         		<div class="pricing-entry pb-5 text-center">
         			<div>
 	        			<h3 class="mb-4">Platinum</h3>
-	        			<p><span class="price">Ksh 200</span> <span class="per">/ session</span></p>
+	        			<p><span class="price">Ksh 200+</span> <span class="per">/ session</span></p>
 	        		</div>
         			<ul>
         				<li>Diagnostic Services</li>
@@ -351,8 +351,8 @@
             	<div class="block-23 mb-3">
 	              <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text">KENOL town off Nairobi-Nyeri Highway, Maragwa, Muranga, Kenya</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">kanyisammy@gmail.com</span></a></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">0711 474 252</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">KMEDH2014@gmail.com</span></a></li>
 	              </ul>
 	            </div>
             </div>
@@ -362,7 +362,7 @@
           <div class="col-md-12 text-center">
 
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">SammyKanyi</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">SammyKanyi | Alvin Gitonga Muthui | Kyendy Mauwi</a>
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
