--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
     
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Kenneth<span>Matiba</span></a>
+	      <a class="navbar-brand" href="index.html">Kenneth<span>Matiba HOSPITAL</span></a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -75,10 +75,10 @@
             <p><span>Address:</span> KENOL town 70m(200ft) off Nairobi-Nyeri Highway, Maragwa, Muranga, Kenya</p>
           </div>
           <div class="col-md-3">
-            <p><span>Phone:</span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
+            <p><span>Phone:</span> <a href="tel://1234567920">0711 474 252</a></p>
           </div>
           <div class="col-md-3">
-            <p><span>Email:</span> <a href="mailto:info@kanyisammy@gmail.com">kanyisammy@gmail.com</a></p>
+            <p><span>Email:</span> <a href="mailto:kanyisammy@gmail.com">KMEDH2014@gmail.com</a></p>
           </div>
           <div class="col-md-3">
             <p><span>Website</span> <a href="https://muranga.go.ke/"></a>Muranga County Government</p>
@@ -170,8 +170,8 @@
 				  <div class="block-23 mb-3">
 					<ul>
 					  <li><span class="icon icon-map-marker"></span><span class="text">KENOL town off Nairobi-Nyeri Highway, Maragwa, Muranga, Kenya</span></li>
-					  <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-					  <li><a href="#"><span class="icon icon-envelope"></span><span class="text">kanyisammy@gmail.com</span></a></li>
+					  <li><a href="#"><span class="icon icon-phone"></span><span class="text">0711 474 252</span></a></li>
+					  <li><a href="#"><span class="icon icon-envelope"></span><span class="text">KMEDH2014@gmail.com</span></a></li>
 					</ul>
 	            </div>
             </div>
@@ -181,7 +181,7 @@
           <div class="col-md-12 text-center">
 
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Sammy Kanyi</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Sammy Kanyi | Alvin Gitonga Muthui | Kyendy Mauwi</a>
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
